Another attempt to reduce checkstyle & findbugs warnings. To avoid breaking existing code and run configs, the version has been increased to 1.2.2-S